Component refactors and refinement
